# API_JupyterNotebook_Deploy

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  testes.py
.github/workflows/: main.yml
app/: config.py  data.py  main.py  model.py  routes.py  schema.py
tests/: test_api.py
