[tool.poetry]
name = "api-jupyternotebook-deploy"
version = "0.1.0"
description = ""
authors = ["Prog-LucasAlves <lucasalves_taz@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit-hooks = "^4.5.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
taskipy = "^1.12.2"
pytest = "^7.4.3"
httpx = "^0.25.2"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.13.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
